Added compare canvas (pretty rough)

--- a/projects/ui/index-logout.html
+++ b/projects/ui/index-logout.html
@@ -46,7 +46,7 @@
         <div class="span12">
           <div class="hero-unit">
             <h1>Find better products!</h1>
-            <p style="margin-top: 15px">SummarizeIt lets you find the best product for your needs.</p>
+            <p style="margin-top: 15px">SummarizeIt lets you find the best product for your needs by isolating reviews based real-life scenarios, not manufacterer specifications.</p>
             <p><a class="btn btn-primary btn-large" href="index.html">Try it out!</a></p>
           </div>
           <h2>Highest Rated <a class="btn btn-warning pull-right" href="products.html">View More <i class="icon-circle-arrow-right icon-white"></i></a></h2>
