--- a/projects/ui/profile.html
+++ b/projects/ui/profile.html
@@ -36,7 +36,7 @@
           </form>
           <ul class="nav pull-right">
             <li><img data-src="holder.js/35x35" class="img-rounded" alt="35x35" style="width: 35px; height: 35px; margin-top: 8px" src="holder.js/35x35"></li>
-            <li class="dropdown"> 3
+            <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Artur Pokusin <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="profile.html">Your Profile</a></li>
