Added new icon fonts and social buttons (including classes for re-use)

--- a/projects/ui/product.html
+++ b/projects/ui/product.html
@@ -384,7 +384,7 @@
     <script src="js/bootstrap-tagmanager.js"></script>
     <script>
 
-      toggleCompare = function() {
+      var toggleCompare = function() {
         var compareContain = $('.compare-container');
         compareContain.toggleClass('compared');
       }
