--- a/projects/ui/index-logout.html
+++ b/projects/ui/index-logout.html
@@ -5,7 +5,7 @@
     <title>Summarize | Home</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/bootstrap-tagmanager.css" rel="stylesheet" media="screen">
+
     <link href="css/styles.css" rel="stylesheet" media="screen">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href="assets/css/bootstrap-responsive.css" rel="stylesheet"> -->
@@ -34,7 +34,7 @@
             </div>
           </form>
           <ul class="nav pull-right">
-            <li><a href="index.html">Sign In</a></li>
+            <li><a href="#loginPrompt" role="button" data-toggle="modal">Sign In</a></li>
             <li><a href="index.html">Register</a></li>
           </ul>
         </div>
@@ -77,7 +77,8 @@
                   <div class="overlay">The stunning new all-in-one iMac features a beautiful, completely re-engineered 27-inch widescreen display that's 75 percent less reflective. Third-generation quad-core Intel Core processors and superfast NVIDIA graphics make it the most powerful iMac yet. And it comes standard with 8 GB memory, a 1 TB hard drive, and advanced, high-speed I/O, including two Thunderbolt ports and four USB 3 ports. All in an impossibly thin enclosure that's only 5mm at the edge.
                   </div>
                   <img data-src="holder.js/210x140" alt="210x140" src="holder.js/210x140">
-                </a>                <div class="caption">
+                </a>
+                <div class="caption">
                     <h3>iPad Mini 16GB Wi-Fi</h3>
                     <p>
                       <div class="btn-group">
@@ -95,7 +96,8 @@
                   <div class="overlay">The stunning new all-in-one iMac features a beautiful, completely re-engineered 27-inch widescreen display that's 75 percent less reflective. Third-generation quad-core Intel Core processors and superfast NVIDIA graphics make it the most powerful iMac yet. And it comes standard with 8 GB memory, a 1 TB hard drive, and advanced, high-speed I/O, including two Thunderbolt ports and four USB 3 ports. All in an impossibly thin enclosure that's only 5mm at the edge.
                   </div>
                   <img data-src="holder.js/210x140" alt="210x140" src="holder.js/210x140">
-                </a>                <div class="caption">
+                </a>
+                <div class="caption">
                     <h3>iPhone 32GB AT&amp;T</h3>
                     <p>
                       <div class="btn-group">
@@ -136,7 +138,8 @@
                   <div class="overlay">The stunning new all-in-one iMac features a beautiful, completely re-engineered 27-inch widescreen display that's 75 percent less reflective. Third-generation quad-core Intel Core processors and superfast NVIDIA graphics make it the most powerful iMac yet. And it comes standard with 8 GB memory, a 1 TB hard drive, and advanced, high-speed I/O, including two Thunderbolt ports and four USB 3 ports. All in an impossibly thin enclosure that's only 5mm at the edge.
                   </div>
                   <img data-src="holder.js/210x140" alt="210x140" src="holder.js/210x140">
-                </a>                <div class="caption">
+                </a>
+                <div class="caption">
                     <h3>LED Cinema Display 27"</h3>
                     <p>
                       <div class="btn-group">
@@ -154,7 +157,8 @@
                   <div class="overlay">The stunning new all-in-one iMac features a beautiful, completely re-engineered 27-inch widescreen display that's 75 percent less reflective. Third-generation quad-core Intel Core processors and superfast NVIDIA graphics make it the most powerful iMac yet. And it comes standard with 8 GB memory, a 1 TB hard drive, and advanced, high-speed I/O, including two Thunderbolt ports and four USB 3 ports. All in an impossibly thin enclosure that's only 5mm at the edge.
                   </div>
                   <img data-src="holder.js/210x140" alt="210x140" src="holder.js/210x140">
-                </a>                <div class="caption">
+                </a>
+                <div class="caption">
                     <h3>Klipsch Headphones</h3>
                     <p>
                       <div class="btn-group">
@@ -172,7 +176,8 @@
                   <div class="overlay">The stunning new all-in-one iMac features a beautiful, completely re-engineered 27-inch widescreen display that's 75 percent less reflective. Third-generation quad-core Intel Core processors and superfast NVIDIA graphics make it the most powerful iMac yet. And it comes standard with 8 GB memory, a 1 TB hard drive, and advanced, high-speed I/O, including two Thunderbolt ports and four USB 3 ports. All in an impossibly thin enclosure that's only 5mm at the edge.
                   </div>
                   <img data-src="holder.js/210x140" alt="210x140" src="holder.js/210x140">
-                </a>                <div class="caption">
+                </a>
+                <div class="caption">
                     <h3>Colt .45</h3>
                     <p>
                       <div class="btn-group">
@@ -213,7 +218,8 @@
                   <div class="overlay">The stunning new all-in-one iMac features a beautiful, completely re-engineered 27-inch widescreen display that's 75 percent less reflective. Third-generation quad-core Intel Core processors and superfast NVIDIA graphics make it the most powerful iMac yet. And it comes standard with 8 GB memory, a 1 TB hard drive, and advanced, high-speed I/O, including two Thunderbolt ports and four USB 3 ports. All in an impossibly thin enclosure that's only 5mm at the edge.
                   </div>
                   <img data-src="holder.js/210x140" alt="210x140" src="holder.js/210x140">
-                </a>                <div class="caption">
+                </a>
+                <div class="caption">
                     <h3>Aperture Coffee Mug</h3>
                     <p>
                       <div class="btn-group">
@@ -231,7 +237,8 @@
                   <div class="overlay">The stunning new all-in-one iMac features a beautiful, completely re-engineered 27-inch widescreen display that's 75 percent less reflective. Third-generation quad-core Intel Core processors and superfast NVIDIA graphics make it the most powerful iMac yet. And it comes standard with 8 GB memory, a 1 TB hard drive, and advanced, high-speed I/O, including two Thunderbolt ports and four USB 3 ports. All in an impossibly thin enclosure that's only 5mm at the edge.
                   </div>
                   <img data-src="holder.js/210x140" alt="210x140" src="holder.js/210x140">
-                </a>                <div class="caption">
+                </a>
+                <div class="caption">
                     <h3>Canon 5D Mk III</h3>
                     <p>
                       <div class="btn-group">
@@ -249,7 +256,8 @@
                   <div class="overlay">The stunning new all-in-one iMac features a beautiful, completely re-engineered 27-inch widescreen display that's 75 percent less reflective. Third-generation quad-core Intel Core processors and superfast NVIDIA graphics make it the most powerful iMac yet. And it comes standard with 8 GB memory, a 1 TB hard drive, and advanced, high-speed I/O, including two Thunderbolt ports and four USB 3 ports. All in an impossibly thin enclosure that's only 5mm at the edge.
                   </div>
                   <img data-src="holder.js/210x140" alt="210x140" src="holder.js/210x140">
-                </a>                <div class="caption">
+                </a>
+                <div class="caption">
                     <h3>Bose SoundLink</h3>
                     <p>
                       <div class="btn-group">
@@ -290,7 +298,8 @@
                   <div class="overlay">The stunning new all-in-one iMac features a beautiful, completely re-engineered 27-inch widescreen display that's 75 percent less reflective. Third-generation quad-core Intel Core processors and superfast NVIDIA graphics make it the most powerful iMac yet. And it comes standard with 8 GB memory, a 1 TB hard drive, and advanced, high-speed I/O, including two Thunderbolt ports and four USB 3 ports. All in an impossibly thin enclosure that's only 5mm at the edge.
                   </div>
                   <img data-src="holder.js/210x140" alt="210x140" src="holder.js/210x140">
-                </a>                <div class="caption">
+                </a>
+                <div class="caption">
                     <h3>Seagate 500GB Hard Drive</h3>
                     <p>
                       <div class="btn-group">
@@ -308,7 +317,8 @@
                   <div class="overlay">The stunning new all-in-one iMac features a beautiful, completely re-engineered 27-inch widescreen display that's 75 percent less reflective. Third-generation quad-core Intel Core processors and superfast NVIDIA graphics make it the most powerful iMac yet. And it comes standard with 8 GB memory, a 1 TB hard drive, and advanced, high-speed I/O, including two Thunderbolt ports and four USB 3 ports. All in an impossibly thin enclosure that's only 5mm at the edge.
                   </div>
                   <img data-src="holder.js/210x140" alt="210x140" src="holder.js/210x140">
-                </a>                <div class="caption">
+                </a>
+                <div class="caption">
                     <h3>Moleskine Notebook</h3>
                     <p>
                       <div class="btn-group">
@@ -326,7 +336,8 @@
                   <div class="overlay">The stunning new all-in-one iMac features a beautiful, completely re-engineered 27-inch widescreen display that's 75 percent less reflective. Third-generation quad-core Intel Core processors and superfast NVIDIA graphics make it the most powerful iMac yet. And it comes standard with 8 GB memory, a 1 TB hard drive, and advanced, high-speed I/O, including two Thunderbolt ports and four USB 3 ports. All in an impossibly thin enclosure that's only 5mm at the edge.
                   </div>
                   <img data-src="holder.js/210x140" alt="210x140" src="holder.js/210x140">
-                </a>                <div class="caption">
+                </a>
+                <div class="caption">
                     <h3>Apple Magic Mouse</h3>
                     <p>
                       <div class="btn-group">
@@ -363,55 +374,43 @@
     </div>
 
   <!-- Add Product Modal -->
-  <div id="addProduct" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="addProductLabel" aria-hidden="true">
+  <div id="loginPrompt" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="loginPrompt" aria-hidden="true">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-      <h2 id="addProductLabel">Add a Product</h2>
+      <h2 id="addProductLabel">Sign In
+      <div class="social_signin"><a href="#" class="btn btn-facebook"><i class="icon icon-facebook"></i> Use Facebook</a>
+        <a href="#" class="btn btn-twitter"><i class="icon icon-twitter"></i> Use Twitter</a>
+      </div>
+      </h2>
     </div>
     <div class="modal-body grey">
-      <form class="form-inline" style="margin: 5px">
-        <input type="text" class="input-xlarge" placeholder="URL of Product">
-        <button type="submit" href="#confirmProduct" role="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal">Auto-fill Info</button><button type="submit" class="btn">Manually Add Info</button>
+      <form class="form-horizontal">
+        <div class="control-group">
+          <label class="control-label" for="inputEmail">Email</label>
+          <div class="controls">
+            <input type="text" id="inputEmail" placeholder="Email">
+          </div>
+        </div>
+        <div class="control-group" style="margin-bottom: 5px">
+          <label class="control-label" for="inputPassword">Password</label>
+          <div class="controls">
+            <input type="password" id="inputPassword" placeholder="Password">
+          </div>
+        </div>
+        <div class="control-group">
+          <div class="controls">
+            <label class="checkbox" style="padding-bottom: 5px">
+              <input type="checkbox"> Remember me
+            </label>
+            <button type="submit" class="btn btn-primary">Sign in</button>
+          </div>
+        </div>
       </form>
-    </div>
-  </div>
-
-    <!-- Confirm Product Modal -->
-  <div id="confirmProduct" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="confirmProductLabel" aria-hidden="true">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-      <h2 id="confirmProductLabel">Confirm Product Info</h2>
-    </div>
-    <div class="modal-body grey">
-      <img data-src="holder.js/120x120" alt="120x120" style="width: 120px; height: 120px; margin-right: 16px;" src="holder.js/120x120" class="pull-left">
-      <h3 style="margin-top: 0; padding-top: 0; font-weight: 500; margin-bottom: 0">iPad Mini 16GB Wi-Fi</h3>
-      <p>
-        Conceived from its sleek, glossy 10" counterpart, the new iPad Mini boasts one gigantic new trait over the full-sized iPad: the ability to hold it in one hand. This almost revolutionary twist on the device that sparked a frenzy in the tablet world has finally brought joy to those that have held out hope of such higher portability in an iPad for so long. But does the iPad Mini live up to the hype? Absolutely.
-      </p>
-    </div>
-    <div class="modal-body">
-      <input type="text" name="tags" placeholder="Add Some Tags" class="tagManager" />
-<!--       <hr style="margin-top: 5px; margin-bottom: 10px"/> -->
-<!--       <form class="form-inline">
-        <input type="text" class="input input-small" placeholder="Category"></input>
-        <input type="text" class="input" placeholder="Your Feedback" style="width: 286px"></input>
-        <button type="submit" class="btn btn-primary pull-right">Add Feedback</button>
-      </form> -->
-    </div>
-    <div class="modal-body grey">
-      <a class="btn btn-info"><i class="icon icon-time icon-white"></i> Finish Later</a>
-      <a class="btn btn-success pull-right"><i class="icon icon-plus icon-white"></i> Submit Product</a>
-     <a class="btn btn-warning pull-right"><i class="icon icon-remove icon-white"></i> Cancel</a>
-
     </div>
   </div>
 
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/holder.js"></script>
-    <script src="js/bootstrap-tagmanager.js"></script>
-    <script>
-      jQuery(".tagManager").tagsManager();
-    </script>
   </body>
 </html>
