--- a/projects/ui/profile.html
+++ b/projects/ui/profile.html
@@ -55,7 +55,7 @@
       <div class="row">
         <div class="span9">
           <img class="pull-left" style="margin-right: 3em; margin-top: 1em" src="holder.js/150x150">
-          <h1 style="margin-top: 1em;">Artur Pokusin</h1>
+          <h1 class="user_name">Artur Pokusin</h1>
           <h2>24 points / 15 products</h2>
           <div class="clearfix"></div>
           <hr />
@@ -243,7 +243,7 @@
     <script src="js/holder.js"></script>
     <script src="js/bootstrap-tagmanager.js"></script>
     <script>
-      jQuery(".tagManager").tagsManager();
+      $(".tagManager").tagsManager();
     </script>
   </body>
 </html>
