--- a/projects/ui/index-logout.html
+++ b/projects/ui/index-logout.html
@@ -403,6 +403,7 @@
               <input type="checkbox"> Remember me
             </label>
             <button type="submit" class="btn btn-primary">Sign in</button>
+            <a href="#" class="btn">Register</a>
           </div>
         </div>
       </form>
