Added minimal Profile update

--- a/projects/ui/profile_settings.html
+++ b/projects/ui/profile_settings.html
@@ -58,103 +58,62 @@
           <h1 class="user_name">Artur Pokusin</h1>
           <h2>24 points / 15 products</h2>
           <div class="clearfix"></div>
-          <section class="account_settings_wrap">
-            <h2>Account Settings <a href="#" class="section_hide btn btn-link">Hide Section</a></h2>
-            <hr />
-            <form class="form-horizontal">
-              <div class="control-group">
-                <label class="control-label" for="inputUsername">Username</label>
-                <div class="controls">
-                  <input type="text" class="input input-xlarge" id="inputUsername" placeholder="Username">
+          <hr />
+          <form class="form-horizontal">
+            <div class="control-group">
+              <label class="control-label" for="inputUsername">Username</label>
+              <div class="controls">
+                <input type="text" class="input input-xlarge" id="inputUsername" placeholder="Username">
+              </div>
+            </div>
+            <div class="control-group">
+              <label class="control-label" for="inputEmail">Email</label>
+              <div class="controls">
+                <input type="text" class="input input-xlarge" id="inputEmail" placeholder="Email">
+              </div>
+            </div>
+            <div class="control-group">
+              <label class="control-label" for="inputFirstName">First Name</label>
+              <div class="controls">
+                <input type="text" class="input input-xlarge" id="inputFirstName" placeholder="First Name">
+              </div>
+            </div>
+            <div class="control-group">
+              <label class="control-label" for="inputLastName">Last Name</label>
+              <div class="controls">
+                <input type="text" class="input input-xlarge" id="inputLastName" placeholder="Last Name">
+              </div>
+            </div>
+            <div class="control-group">
+              <label class="control-label" for="Location">Location</label>
+              <div class="controls">
+                <input type="text" class="input input-xlarge" id="Location" placeholder="Location">
+              </div>
+            </div>
+            <div class="control-group">
+              <label class="control-label" for="Location">Gender</label>
+              <div class="controls">
+                <div class="btn-group" data-toggle="buttons-radio">
+                  <button type="button" class="btn btn-primary">Male</button>
+                  <button type="button" class="btn btn-primary">Female</button>
+                  <button type="button" class="btn btn-warning"><i class="icon icon-white icon-remove"></i></button>
                 </div>
               </div>
-              <div class="control-group">
-                <label class="control-label" for="inputEmail">Email</label>
-                <div class="controls">
-                  <input type="text" class="input input-xlarge" id="inputEmail" placeholder="Email">
-                </div>
+            </div>
+            <div class="control-group">
+              <label class="control-label" for="inputPassword">Password</label>
+              <div class="controls">
+                <input type="password" class="input input-xlarge" id="inputPassword" placeholder="Enter Password to Save Changes">
               </div>
-              <div class="control-group">
-                <label class="control-label" for="inputFirstName">First Name</label>
-                <div class="controls">
-                  <input type="text" class="input input-xlarge" id="inputFirstName" placeholder="First Name">
-                </div>
+            </div>
+            <div class="control-group">
+              <div class="controls">
+                <button type="submit" class="btn">Save Changes</button>
               </div>
-              <div class="control-group">
-                <label class="control-label" for="inputLastName">Last Name</label>
-                <div class="controls">
-                  <input type="text" class="input input-xlarge" id="inputLastName" placeholder="Last Name">
-                </div>
-              </div>
-              <div class="control-group">
-                <label class="control-label" for="Location">Location</label>
-                <div class="controls">
-                  <input type="text" class="input input-xlarge" id="Location" placeholder="Location">
-                </div>
-              </div>
-              <div class="control-group">
-                <label class="control-label" for="Location">Gender</label>
-                <div class="controls">
-                  <div class="btn-group" data-toggle="buttons-radio">
-                    <button type="button" class="btn btn-primary">Male</button>
-                    <button type="button" class="btn btn-primary">Female</button>
-                    <button type="button" class="btn btn-warning"><i class="icon icon-white icon-remove"></i></button>
-                  </div>
-                </div>
-              </div>
-              <div class="control-group">
-                <label class="control-label" for="inputPassword">Password</label>
-                <div class="controls">
-                  <input type="password" class="input input-xlarge" id="inputPassword" placeholder="Enter Password to Save Changes">
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="controls">
-                  <button type="submit" class="btn">Save Changes</button>
-                </div>
-              </div>
-            </form>
-          </section><!-- .account_settings_wrap -->
-          <section class="notifications_wrap">
-            <h2>Notifications <a href="#" class="section_hide btn btn-link">Hide Section</a></h2>
-            <hr />
-            <ul class="unstyled">
-              <li class="notification"><a href="#" class="remove"><i class="icon icon-remove"></i></a> notification</li>
-              <li class="notification"><a href="#"  class="remove"><i class="icon icon-remove"></i></a> notification</li>
-            </ul>
-          </section><!-- .notifications_wrap -->
-          <section class="messages_wrap">
-            <h2>Messages <a href="#" class="section_hide btn btn-link">Hide Section</a></h2>
-            <hr />
-            <ul class="unstyled">
-              <li class="message">
-                <div class="message_actions">
-                  <a href="#" class="btn btn-link"><i class="icon icon-reply"></i></a>
-                  <a href="#" class="btn btn-link"><i class="icon icon-eye-open"></i></a>
-                  <a href="#" class="btn btn-link"><i class="icon icon-trash"></i></a>
-                </div><!-- .message_actions -->
-                <strong><a href="#">John H</a>:</strong>
-                message this is a long message lksadjflaksdjf adfkasdjf;laskdf sdkj fslkd jflskdj sd fosdfoisjo iesjf s fosei jfosei jfosiejf osief osiejf osei jf
-              </li>
-              <li class="message">
-                <div class="message_actions">
-                  <a href="#" class="btn btn-link"><i class="icon icon-reply"></i></a>
-                  <a href="#" class="btn btn-link"><i class="icon icon-eye-open"></i></a>
-                  <a href="#" class="btn btn-link"><i class="icon icon-trash"></i></a>
-                </div><!-- .message_actions -->
-                <strong><a href="#">John H</a>:</strong> dslkfja  dlfakj sdlafk sd;f lkasd; fakljs d;faslkj dflsd j lf ksdjlfksjd
-              </li>
-            </ul>
-          </section><!-- .messages_wrap -->
-          <section class="expert_wrap">
-            <h2>Expert Level <a href="#" class="section_hide btn btn-link">Hide Section</a></h2>
-            <hr />
-            <ul class="unstyled">
-              <li class="level"><a href="#" class="btn btn-info">Expert in Videography</a></li>
-              <li class="level"><a href="#" class="btn btn-info">Expert in Photography</a></li>
-            </ul>
-          </section><!-- .expert_wrap -->
-          <h2>Your Products <a class="btn btn-warning pull-right" href="products.html">View All <i class="icon-circle-arrow-right icon-white"></i></a></h2>
+            </div>
+          </form>
+          <hr />
+          <h2>Products You've Added <a class="btn btn-warning pull-right" href="products.html">View More <i class="icon-circle-arrow-right icon-white"></i></a></h2>
           <hr style="margin-top: -5px" />
           <ul class="thumbnails">
             <li class="span3">
@@ -218,10 +177,10 @@
         <div class="span3">
           <div class="span3" data-spy="affix" data-offset-top="0">
             <a href="#addProduct" role="button" class="btn btn-primary btn-block" data-toggle="modal">Add Product <i class="icon-plus icon-white"></i></a>
-            <a href="#" class="btn btn-link btn-block account_settings_btn">Account Settings</a>
-            <a href="#" class="btn btn-link btn-block notifications_btn">Notifications</a>
-            <a href="#" class="btn btn-link btn-block messages_btn">Messages</a>
-            <a href="#" class="btn btn-link btn-block expert_btn">Expert Level</a>
+            <a href="profile_settings.html" class="btn btn-link btn-block">Account Settings</a>
+            <a href="#" class="btn btn-link btn-block">Notifications</a>
+            <a href="#" class="btn btn-link btn-block">Messages</a>
+            <a href="#" class="btn btn-link btn-block">Expert Level</a>
             <hr />
             <ul class="unstyled well">
               <li><a href="#" class="btn btn-link ">Terms</a></li>
@@ -284,27 +243,7 @@
     <script src="js/holder.js"></script>
     <script src="js/bootstrap-tagmanager.js"></script>
     <script>
-      var toggleSection = function(section) {
-        $(section + '_btn').click(function() {
-          $(section +'_wrap').slideToggle('fast');
-          return false;
-        });
-      };
-      toggleSection('.account_settings');
-      toggleSection('.notifications');
-      toggleSection('.messages');
-      toggleSection('.expert');
-      $('.notification .remove').click(function() {
-        var parent = $(this).parent();
-        parent.fadeOut('fast');
-        return false;
-      });
-      $('.message').hover(function() {
-        $(this).children('.message_actions').toggleClass('active');
-      });
-      $('.section_hide').click(function(){
-        $(this).closest('section').slideToggle();
-      });
+      $(".tagManager").tagsManager();
     </script>
   </body>
 </html>
