Added social links to products (and tweaked search in FAQ)

--- a/projects/ui/product.html
+++ b/projects/ui/product.html
@@ -165,7 +165,7 @@
               <div class="tab-pane" id="faq">
                 <form class="form-search">
                   <div class="input-append">
-                    <input type="text" class="span2 search-query" style="width: 225%" placeholder="Search FAQs">
+                    <input type="text" class="span2 search-query" style="width: 215%" placeholder="Search FAQs">
                     <button type="submit" class="btn">Search</button>
                   </div>
                 </form>
@@ -310,8 +310,10 @@
         </div>
         <div class="span3">
           <div class="span3" data-spy="affix" data-offset-top="0">
+            <a href="#" class="btn btn-facebook btn-half"><i class="icon icon-facebook"></i> Share</a>
+            <a href="#" class="btn btn-twitter btn-half"><i class="icon icon-twitter"></i> Tweet</a>
+            <hr />
             <a href="#addProduct" role="button" class="btn btn-primary btn-block" data-toggle="modal">Add Product <i class="icon-plus icon-white"></i></a>
-            <a href="#" class="btn btn-success btn-block">Share on Facebook</a>
             <a href="#" class="btn btn-warning btn-block">Add to Compare List</a>
             <a href="#" class="btn btn-danger btn-block">Report This Product</a>
             <h3><strong>Product Compare List</strong></h3>
