Added 'Buy' links (amazon + generic)

--- a/projects/ui/product.html
+++ b/projects/ui/product.html
@@ -83,6 +83,10 @@
             <a href="#" class="btn btn-info">tech</a>
             <a href="#" class="btn btn-info">tablet</a>
           </div>
+          <div class="buy_links">
+            <a href="#" class="buy_link btn btn-amazon"><i class="icon icon-shopping-cart"></i> Amazon</a>
+            <a href="#" class="buy_link btn btn-generic-buy"><i class="icon icon-shopping-cart"></i> Buy This</a>
+          </div>
           <div class="clearfix"></div>
 
           <div class="tabbable">
