Added Hero Unit (static for now)

--- a/projects/ui/index-logout.html
+++ b/projects/ui/index-logout.html
@@ -44,11 +44,27 @@
     <div class="container">
       <div class="row">
         <div class="span12">
-          <div class="hero-unit">
-            <h1>Find better products!</h1>
-            <p style="margin-top: 15px">SummarizeIt lets you find the best product for your needs by isolating reviews based real-life scenarios, not manufacterer specifications.</p>
-            <p><a class="btn btn-primary btn-large" href="index.html">Try it out!</a></p>
+        <div id="hero_unit" class="carousel slide">
+          <!-- <ol class="carousel-indicators">
+            <li data-target="#hero_unit" data-slide-to="0" class="active"></li>
+            <li data-target="#hero_unit" data-slide-to="1"></li>
+          </ol> -->
+          <!-- Carousel items -->
+          <div class="carousel-inner">
+            <div class="active item"><img src="img/first_slide_alpha.png" alt="" /></div>
+            <div class="item">
+              <div class="register_buttons">
+                <a href="#" class="btn btn-block btn-success"><i class="icon-user"></i> Create an Account!</a>
+                <a href="#" class="btn btn-block btn-facebook"><i class="icon-facebook"></i> Register with Facebook!</a>
+                <a href="#" class="btn btn-block btn-twitter"><i class="icon-twitter"></i> Register with Twitter!</a>
+              </div>
+              <img src="img/second_slide_alpha.png" alt="" />
+            </div>
           </div>
+          <!-- Carousel nav -->
+          <a class="carousel-control left" href="#hero_unit" data-slide="prev">&lsaquo;</a>
+          <a class="carousel-control right" href="#hero_unit" data-slide="next">&rsaquo;</a>
+        </div>
           <h2>Highest Rated <a class="btn btn-warning pull-right" href="products.html">View More <i class="icon-circle-arrow-right icon-white"></i></a></h2>
           <hr style="margin-top: -5px" />
           <ul class="thumbnails">
